--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,11 +1,11 @@
 {
     "comments": {
         // symbol used for single line comment. Remove this entry if your language does not support line comments
-        "lineComment": "~",
+        "lineComment": "--",
         // symbols used for start and end a block comment. Remove this entry if your language does not support block comments
         "blockComment": [
-            "---",
-            "---"
+            "<|",
+            "|>"
         ]
     },
     // symbols used as brackets
@@ -82,9 +82,9 @@
         ]
     ],
     "indentationRules": {
-        "unIndentedLinePattern": "^\\s*~.*",
+        "unIndentedLinePattern": "^\\s*--.*",
         "increaseIndentPattern": {
-            "pattern": "^\\s*(func|for|type|do|if|case|while)\\b.*$|\\s*(else|else\\s*if)\\b.*$",
+            "pattern": "^\\s*(func|for|type|test|if|case|while|else|elif)\\b.*$",
             "flags": "i"
         },
         "decreaseIndentPattern": {
